test: add TestStorage